--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: python
 python:
   - 2.7
   - 3.3
+env:
+  UNO=python-uno
+  UNO=python-uno3
 install:
   sudo apt-get install unoconv
+  sudo apt-get install $UNO
 before_script:
   unoconv -l -v & # start LibreOffice server
 script:
